--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: Prophesy
+description: Your one-stop shop for NFL game outcomes, score predictions, and betting tips.
